<resources>
    <string name="app_name">Autorization</string>
    <string name="eText">Введите имя </string>
    <string name="mButton">OK</string>
    <string name="textList">новый пункт</string>
    <string name="logOf">LOG ON</string>
    <string name="myMeny">meny</string>
    <string name="tasks">введите текст</string>
    <string name="add">добавить</string>
    <string name="toAdd">ДОБАВИТЬ</string>
    <string name="toSee">смотреть</string>
    <string name="addInToolbar">add</string>
    <string name="addSchedulers">Add a New Event</string>
    <string name="selectSchedulers">Select Mode:</string>
    <string name="radioBnt1">Heat/Cool</string>
    <string name="radioBtn2">Auto</string>
    <string name="toSchedulers">to screen</string>
    <string name="textforTime">Time:</string>
    <string name="textforDays">Days:</string>
    <string name="textforTemperature1">Lower temperature, °F:</string>
    <string name="textforTemperature2">Upper temperature, °F:</string>
    <string name="textforTemperature">Temperature, °F:</string>
    <string name="textforApplyZone">Apply to zones:</string>
    <string name="zone1">Zone1: Living Room</string>
    <string name="zone2">Zone2: Master Bedroom</string>
    <string name="zone3">Zone3: Kids Bedroom</string>
    <string name="cbM">M</string>
    <string name="cbTu">Tu</string>
    <string name="cbW">W</string>
    <string name="cbTh">Th</string>
    <string name="cbF">F</string>
    <string name="cbSa">Sa</string>
    <string name="cbSu">Su</string>
    <string name="btSave">save</string>
</resources>
