<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.Schedule.SchedulerActivity">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/padding_standart_16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_16dp_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/padding_standart_16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizonatal_16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/padding_standart_16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizonatal_16dp_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_65"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.65" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_70"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7" />

        <TextView
            android:id="@+id/textview1"
            android:layout_width="@dimen/null_size_0dp"
            android:layout_height="wrap_content"
            android:text="@string/addSchedulers"
            android:textSize="@dimen/text_size_22sp"
            app:layout_constraintEnd_toEndOf="@id/vertical_16dp_end"
            app:layout_constraintStart_toStartOf="@id/vertical_16dp"
            app:layout_constraintTop_toBottomOf="@id/horizonatal_16dp" />

        <TextView
            android:id="@+id/textviewSelectMode"
            android:layout_width="@dimen/null_size_0dp"
            android:layout_height="wrap_content"
            android:text="@string/selectSchedulers"
            android:textSize="@dimen/text_size_22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/vertical_16dp_end"
            app:layout_constraintStart_toStartOf="@id/vertical_16dp"
            app:layout_constraintTop_toBottomOf="@id/textview1" />

        <RadioGroup
            android:id="@+id/myRadioGroup"
            android:layout_width="@dimen/null_size_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/vertical_16dp_end"
            app:layout_constraintStart_toStartOf="@id/vertical_16dp"
            app:layout_constraintTop_toBottomOf="@id/textviewSelectMode">

            <RadioButton
                android:id="@+id/radio_heat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/forRadioButton_24dp"
                android:text="@string/radioBnt1" />

            <RadioButton
                android:id="@+id/radio_auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/forRadioButton_24dp"
                android:checked="true"
                android:text="@string/radioBtn2" />

        </RadioGroup>

        <TextView
            android:id="@+id/textviewTime"
            android:layout_width="@dimen/null_size_0dp"
            android:layout_height="wrap_content"
            android:text="@string/textforTime"
            android:textSize="@dimen/text_size_22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/vertical_16dp_end"
            app:layout_constraintStart_toStartOf="@id/vertical_16dp"
            app:layout_constraintTop_toBottomOf="@id/myRadioGroup" />

        <NumberPicker
            android:id="@+id/numberPickerHour"
            android:layout_width="@dimen/null_size_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/vertical_30"
            app:layout_constraintStart_toStartOf="@id/vertical_16dp"
            app:layout_constraintTop_toBottomOf="@id/textviewTime" />

        <NumberPicker
            android:id="@+id/numberPickerMinutes"
            android:layout_width="@dimen/null_size_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/vertical_65"
            app:layout_constraintStart_toStartOf="@id/vertical_35"
            app:layout_constraintTop_toBottomOf="@id/textviewTime" />

        <NumberPicker
            android:id="@+id/numberPickerAmPm"
            android:layout_width="@dimen/null_size_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/vertical_16dp_end"
            app:layout_constraintStart_toStartOf="@id/vertical_70"
            app:layout_constraintTop_toBottomOf="@id/textviewTime" />

        <TextView
            android:id="@+id/textviewDays"
            android:layout_width="@dimen/null_size_0dp"
            android:layout_height="wrap_content"
            android:text="@string/textforDays"
            android:textSize="@dimen/text_size_22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/vertical_16dp_end"
            app:layout_constraintStart_toStartOf="@id/vertical_16dp"
            app:layout_constraintTop_toBottomOf="@id/numberPickerAmPm" />

        <CheckBox
            android:id="@+id/M"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbM"
            app:layout_constraintEnd_toStartOf="@id/Tu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textviewDays" />

        <CheckBox
            android:id="@+id/Tu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbTu"
            app:layout_constraintEnd_toStartOf="@id/W"
            app:layout_constraintStart_toEndOf="@id/M"
            app:layout_constraintTop_toBottomOf="@id/textviewDays" />

        <CheckBox
            android:id="@+id/W"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbW"
            app:layout_constraintEnd_toStartOf="@id/Th"
            app:layout_constraintStart_toEndOf="@id/Tu"
            app:layout_constraintTop_toBottomOf="@id/textviewDays" />

        <CheckBox
            android:id="@+id/Th"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbTh"
            app:layout_constraintEnd_toStartOf="@id/F"
            app:layout_constraintStart_toEndOf="@id/W"
            app:layout_constraintTop_toBottomOf="@id/textviewDays" />

        <CheckBox
            android:id="@+id/F"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/Th"
            app:layout_constraintTop_toBottomOf="@id/textviewDays" />

        <CheckBox
            android:id="@+id/Sa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbSa"
            app:layout_constraintBottom_toTopOf="@id/textviewTempereture1"
            app:layout_constraintStart_toStartOf="@id/M"
            app:layout_constraintTop_toBottomOf="@id/F" />

        <CheckBox
            android:id="@+id/Su"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbSu"
            app:layout_constraintEnd_toStartOf="@id/W"
            app:layout_constraintStart_toEndOf="@id/M"
            app:layout_constraintTop_toBottomOf="@id/F" />

        <TextView
            android:id="@+id/textviewTempereture1"
            android:layout_width="@dimen/null_size_0dp"
            android:layout_height="wrap_content"
            android:text="@string/textforTemperature1"
            android:textSize="@dimen/text_size_22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/vertical_16dp_end"
            app:layout_constraintStart_toStartOf="@id/vertical_16dp"
            app:layout_constraintTop_toBottomOf="@id/Su" />

        <NumberPicker
            android:id="@+id/numberPickerTemperature1"
            android:layout_width="@dimen/null_size_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/vertical_65"
            app:layout_constraintStart_toStartOf="@id/vertical_35"
            app:layout_constraintTop_toBottomOf="@+id/textviewTempereture1" />

        <TextView
            android:id="@+id/textviewTempereture2"
            android:layout_width="@dimen/null_size_0dp"
            android:layout_height="wrap_content"
            android:text="@string/textforTemperature2"
            android:textSize="@dimen/text_size_22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/vertical_16dp_end"
            app:layout_constraintStart_toStartOf="@id/vertical_16dp"
            app:layout_constraintTop_toBottomOf="@id/numberPickerTemperature1" />

        <NumberPicker
            android:id="@+id/numberPickerTemperature2"
            android:layout_width="@dimen/null_size_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/vertical_65"
            app:layout_constraintStart_toStartOf="@id/vertical_35"
            app:layout_constraintTop_toBottomOf="@+id/textviewTempereture2" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/twoGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="textviewTempereture1,textviewTempereture2,numberPickerTemperature1,numberPickerTemperature2" />

        <TextView
            android:id="@+id/textviewTempereture3"
            android:layout_width="@dimen/null_size_0dp"
            android:layout_height="wrap_content"
            android:text="@string/textforTemperature"
            android:textSize="@dimen/text_size_22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/vertical_16dp_end"
            app:layout_constraintStart_toStartOf="@id/vertical_16dp"
            app:layout_constraintTop_toBottomOf="@id/numberPickerTemperature2" />

        <NumberPicker
            android:id="@+id/numberPickerTemperature3"
            android:layout_width="@dimen/null_size_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/vertical_65"
            app:layout_constraintStart_toStartOf="@id/vertical_35"
            app:layout_constraintTop_toBottomOf="@+id/textviewTempereture3" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/oneGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="textviewTempereture3,numberPickerTemperature3" />

        <TextView
            android:id="@+id/textviewZone"
            android:layout_width="@dimen/null_size_0dp"
            android:layout_height="wrap_content"
            android:text="@string/textforApplyZone"
            android:textSize="@dimen/text_size_22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/vertical_16dp_end"
            app:layout_constraintStart_toStartOf="@id/vertical_16dp"
            app:layout_constraintTop_toBottomOf="@id/numberPickerTemperature3" />

        <CheckBox
            android:id="@+id/Zone1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zone1"
            app:layout_constraintStart_toStartOf="@id/M"
            app:layout_constraintTop_toBottomOf="@id/textviewZone" />

        <CheckBox
            android:id="@+id/Zone2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zone2"
            app:layout_constraintStart_toStartOf="@id/M"
            app:layout_constraintTop_toBottomOf="@id/Zone1" />

        <CheckBox
            android:id="@+id/Zone3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zone3"
            app:layout_constraintStart_toStartOf="@id/M"
            app:layout_constraintTop_toBottomOf="@id/Zone2" />

        <Button
            android:id="@+id/buttonSaveScheduler"
            style="@style/myButtonStyle"
            android:layout_width="@dimen/null_size_0dp"
            android:layout_height="wrap_content"
            android:text="@string/btSave"
            app:layout_constraintBottom_toTopOf="@id/horizonatal_16dp_end"
            app:layout_constraintEnd_toEndOf="@id/vertical_65"
            app:layout_constraintStart_toStartOf="@id/vertical_35"
            app:layout_constraintTop_toBottomOf="@id/Zone3" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>